# excelr8

./: .gitignore  CMakeLists.txt  meson.build
include/excelr8/: biff.hpp  book.hpp  compdoc.hpp  data.hpp  excelr8.hpp  formatting.hpp  name.hpp  util.hpp
src/: biff.cpp  book.cpp  compdoc.cpp  data.cpp  excelr8.cpp  formatting.cpp  util.cpp
